...
    

    
    @IBAction func deleteButtonTapped(_ sender: Any) {
        let alertViewController = Utils.alertViewController(withTitle: nil, message: "Delete the selected photo", tapDismiss: true)!
        
        alertViewController.addAction(NYAlertAction(title: "Delete", style: .destructive) { (action: NYAlertAction?) in
            self.dismiss(animated: true, completion: nil)
            self.deletePhotoItem()
        })
        
        alertViewController.addAction(NYAlertAction(title: "Cancel", style: .cancel) { (action: NYAlertAction?) in
            self.dismiss(animated: true, completion: nil)
...
    @IBAction func addButtonTapped(_ sender: Any) {
        
        let value = UIInterfaceOrientation.portrait.rawValue
        UIDevice.current.setValue(value, forKey: "orientation")

        var config = Configuration()
        config.doneButtonTitle = "Upload"
        config.noImagesTitle = "Sorry! There are no images here!"
        config.recordLocation = false
        
        let imagePicker = ImagePickerController(configuration: config)
        imagePicker.imageLimit = 1
        imagePicker.delegate = self
...
