...
                                <exclude reference="iko-Ot-Vxs"/>
                                <exclude reference="mTw-LX-lJD"/>
                                <include reference="yR0-jn-bAe"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Cloud Photos" id="1hn-cK-2dB">
                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="HFs-Z0-1mT">
                            <connections>
                                <action selector="deleteButtonTapped:" destination="X6x-jT-rWD" id="vk2-Vg-sFQ"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ExZ-2f-je7">
...
